Append gc parameter.